syntax = "proto3";
package user;

import "common/types.proto";

// 用户信息
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  common.Timestamp created_at = 5;
  common.Address address = 6;
}

// 用户创建请求
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
  common.Address address = 5;
}

// 用户创建响应
message CreateUserResponse {
  common.Status status = 1;
  User user = 2;
}

// 用户查询请求
message GetUserRequest {
  string user_id = 1;
}

// 用户查询响应
message GetUserResponse {
  common.Status status = 1;
  User user = 2;
}

// 用户列表请求
message ListUsersRequest {
  common.PaginationRequest pagination = 1;
}

// 用户列表响应
message ListUsersResponse {
  common.Status status = 1;
  repeated User users = 2;
  int32 total_count = 3;
}
