syntax = "proto3";
package product;

import "product/model.proto";
import "common/base.proto";

// 产品服务
service ProductService {
  // 获取产品信息
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  common.Status status = 1;
  Product product = 2;
}
